fix problem of too big codeblock cause overflow

--- a/themes/htmlStyle/source/css/partial/post.styl
+++ b/themes/htmlStyle/source/css/partial/post.styl
@@ -1,5 +1,8 @@
+.main-container
+    justify-content: space-around
+
 .post-details
-    width: 100%
+    width: 95%
     margin: 0 10px 0 10px
     max-width: 620px
     inline-height: 1.8em
@@ -29,7 +32,6 @@
         h6
             margin-block: 0
             margin-inline: 0
-            margin-top: 20px
             margin-bottom: 15px
             line-height: 1.2em
         h1
